--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -176,7 +176,7 @@
    },
    "source": [
     "**Answer: **\n",
-    "Increase in RM will lead to decrease in MEDV,because normally if the average rooms is more in neighborhood then for the same house price will be lesser ,because people prefer house with more rooms.\n",
+    "Increase in RM will lead to increase in MEDV,because normally if the average rooms is more in neighborhood then  house price will be more ,because people prefer house with more rooms.\n",
     "\n",
     "LSTAT increase will decrease MEDV ,because people do not want to prefer a poor locality\n",
     "\n",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -334,7 +334,7 @@
     "\n",
     "# TODO: Shuffle and split the data into training and testing subsets\n",
     "\n",
-    "X_train, X_test, y_train, y_test = cross_validation.train_test_split(feature_shuf, prices_shuf,test_size=0.2,random_state=42)\n",
+    "X_train, X_test, y_train, y_test = cross_validation.train_test_split(features, prices,test_size=0.2,random_state=42)\n",
     "X_train=np.array(X_train)\n",
     "X_test=np.array(X_test)\n",
     "print \"Training and testing split was successful.\""
@@ -433,7 +433,7 @@
     "editable": true
    },
    "source": [
-    "**Answer: ** For max depth 6,the training score decreases when adding more data points but the test score increases on adding more data. Hence adding more data will increase the test score a bit more and improve the model.This is a case of high variance."
+    "**Answer: ** For max depth 6,the training score decreases when adding more data points but the test score increases on adding more data. Hence adding more data will increase the test score a bit more and improve the model.This is a case of high variance.But after adding a lot of data at a certain point adding more data won't help because both curves will converge and the test set score won't increase much. "
    ]
   },
   {
@@ -513,7 +513,7 @@
     "editable": true
    },
    "source": [
-    "**Answer: **  Maximu depth of 3 seems to provide best result for unseen data ,because the score for training data is good and both training and test data score are close.WHich means it is not suffering from high bias/variance."
+    "**Answer: **  Maximum depth of 3 seems to provide best result for unseen data ,because the score for training data is almost 0.8,which is good and test data achieves similar score as that of train data,0.75 approx. Which means the model is predicting the test data well. So it is expected that it will perform well for unseen data as well. maximum depth 1 is suffering from high bias and max depth of 6 and more causes high variance. Hence some point between 3-5 is expected to give the best performance on unseen data."
    ]
   },
   {
@@ -569,7 +569,9 @@
     "editable": true
    },
    "source": [
-    "**Answer: ** k -fold cross validation training technique divides the whole dataset into k subsets and runs the model considering each subset as test set one at a time and then averages the result. Without cross validation it is really difficult to divide the data properly into testing and traing datasets. Because of which other parameter tuning might not give the best model .\n",
+    "**Answer: ** k -fold cross validation training technique divides the whole dataset into k subsets . It takes one of the k subsets as test set and others as training set. This is repeated for all k subsets one at a time and then averages the result.By doing this all of the samples are utilized for training and validation .\n",
+    "\n",
+    "Without k fold cross validation or any other similar CV it is really difficult to divide the data properly into testing and traing datasets. Sometimes it might happen that most of the test set observations or similar observations does not occur in the training set. So it won't be able to generalize well.IT won't be able to predict the test set even after optimizing by grid search. By doing k-fold CV all the dataset will be used for training and validation,hence this kind of problem won't occur.\n",
     "\n"
    ]
   },
@@ -599,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -664,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -721,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -732,9 +734,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted selling price for Client 1's home: $408,635.29\n",
-      "Predicted selling price for Client 2's home: $227,220.00\n",
-      "Predicted selling price for Client 3's home: $896,280.00\n"
+      "Predicted selling price for Client 1's home: $403,025.00\n",
+      "Predicted selling price for Client 2's home: $237,478.72\n",
+      "Predicted selling price for Client 3's home: $931,636.36\n"
      ]
     }
    ],
@@ -750,13 +752,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The predicted 5 nearest neighbors price for home 1 is: $372,540.00 and std dev. is $63,621.34\n",
+      "The predicted 5 nearest neighbors price for home 2 is: $162,120.00 and std dev. is $36,479.61\n",
+      "The predicted 5 nearest neighbors price for home 3 is: $897,120.00 and std dev. is $108,587.67\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/sklearn/utils/validation.py:386: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and willraise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "  DeprecationWarning)\n",
+      "/usr/local/lib/python2.7/dist-packages/sklearn/utils/validation.py:386: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and willraise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "  DeprecationWarning)\n",
+      "/usr/local/lib/python2.7/dist-packages/sklearn/utils/validation.py:386: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and willraise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#####Extra code to validate the predicted price\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "num_neighbors=5\n",
+    "def nearest_neighbor_price(x):\n",
+    "    def find_nearest_neighbor_indexes(x, X):  # x is your vector and X is the data set.\n",
+    "        neigh = NearestNeighbors( num_neighbors )\n",
+    "        neigh.fit(X)\n",
+    "        distance, indexes = neigh.kneighbors( x )\n",
+    "        return indexes\n",
+    "    indexes = find_nearest_neighbor_indexes(x, features)\n",
+    "    sum_prices = []\n",
+    "    for i in indexes:\n",
+    "        sum_prices.append(prices[i])\n",
+    "    neighbor_avg = np.mean(sum_prices)\n",
+    "    neighbor_std = np.std(sum_prices)\n",
+    "    return neighbor_avg,neighbor_std\n",
+    "index = 0  \n",
+    "for i in client_data:\n",
+    "    val,std=nearest_neighbor_price(i)\n",
+    "    index += 1\n",
+    "    print \"The predicted {} nearest neighbors price for home {} is: ${:,.2f} and std dev. is ${:,.2f}\".format(num_neighbors,index, val,std)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
-    "**Answer: ** The predicted prices seems reasonable to me,so I would recommend the client to go with this value."
+    "**Answer: ** \n",
+    "From the above code output it is clear that all three houses are within 1 standard deviation of it's 5 nearest neighbors.So it seems the price predicted follows the trend in the training dataset. \n",
+    "\n",
+    "Also by comparing all three houses\n",
+    "1.Total number of rooms is Max for the house of client 3,then client 1 and client2 is min.The predicted price follows the same . As increase in room increases price ,hence with this regard the prediction is acceptable.\n",
+    "\n",
+    "2.With increase in neighborhood poverty level, price is expected to decrease. As client 2 neighborhood has highest poverty level so price is min,and for client 3 it is max,client 1 is in between.\n",
+    "\n",
+    "3.Student-teacher ratio of nearby schools increase also cause decrease in price.the ratio in client 3 is less in comarison to other two ,hence predicted price for house 3 is high. Same applies between client 1 and 2.\n",
+    "\n",
+    "All the above explainations support the predicted price with respect to the corresponding features.Hence This price can be recommended to the client.\n"
    ]
   },
   {
@@ -772,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -784,17 +849,17 @@
      "output_type": "stream",
      "text": [
       "Trial 1: $391,183.33\n",
-      "Trial 2: $424,935.00\n",
+      "Trial 2: $419,700.00\n",
       "Trial 3: $415,800.00\n",
       "Trial 4: $420,622.22\n",
-      "Trial 5: $418,377.27\n",
+      "Trial 5: $413,334.78\n",
       "Trial 6: $411,931.58\n",
       "Trial 7: $399,663.16\n",
       "Trial 8: $407,232.00\n",
       "Trial 9: $351,577.61\n",
       "Trial 10: $413,700.00\n",
       "\n",
-      "Range in prices: $73,357.39\n"
+      "Range in prices: $69,044.61\n"
      ]
     }
    ],
