modification to answaers

--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -571,7 +571,7 @@
    "source": [
     "**Answer: ** k -fold cross validation training technique divides the whole dataset into k subsets . It takes one of the k subsets as test set and others as training set. This is repeated for all k subsets one at a time and then averages the result.By doing this all of the samples are utilized for training and validation .\n",
     "\n",
-    "Without k fold cross validation or any other similar CV it is really difficult to divide the data properly into testing and traing datasets. Sometimes it might happen that most of the test set observations or similar observations does not occur in the training set. So it won't be able to generalize well.IT won't be able to predict the test set even after optimizing by grid search. By doing k-fold CV all the dataset will be used for training and validation,hence this kind of problem won't occur.\n",
+    "By doing k-fold CV all the dataset will be used for training and validation. If we use only use one random subset of the whole dataset as testing set then the score we evalute for the model will be more noisy than if we do it using multiple subsets of the dataset as we do in k-fold CV . So by using k-fold CV we ensure the score provided by grid search will be a bit consistent.\n",
     "\n"
    ]
   },
@@ -755,7 +755,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
